Wed Jun 29 06:55:10 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Modified the documentation for 'specific' and 'conditional'.

        * modules/WorkspaceCreator.pm:

          Remove ./ from the beginning of located files and directories to
          ensure that workspaces that change directory back to the original
          go back to the correct directory.

        * templates/make.mpd:

          Only create the $(LTARGETDIR) rule if the project is not an exe.

Tue Jun 28 11:33:07 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * templates/automake.mpd:

        Sort custom type's output files so output is easier to inspect
        when hand-tweaking MPC output.

        Add Pkgconfig_Files output to CLEANFILES.

Tue Jun 28 07:39:34 2005  Ming Xiong  <mxiong@tango.dre.vanderbilt.edu>

        * config/ziparchive.mpb

          Added a .mpb file to support ziparchive feature which is needed by
          DAnCE/ComponentPackager.

Tue Jun 28 07:20:08 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:
        * modules/ProjectCreator.pm:

          Added the functionality to negate the project type in 'specific'
          and 'conditional' clauses.

Tue Jun 28 06:31:26 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/zlib.mpb:
        * config/zzip.mpb:

          Changed to use 'libs' instead of lit_libs for some project types.

Mon Jun 27 07:25:08 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          My previous checkin uncovered a serious bug in MPC dealing with
          features that weren't enabled and used the specific/else
          construct.

Mon Jun 27 06:28:54 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/zzip.mpb:

          Developers insist on naming libraries differently for Windows.
          So, for UNIX related projects we use zzip and for all others we
          use zziplib.

Fri Jun 24 12:47:06 2005  Chad Elliott  <elliott_c@ociweb.com>