@@ -1,3 +1,14 @@
+Wed Jun 29 12:15:46 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/ProjectCreator.pm:
+
+          Fixed a bug where mapped keywords within the scope of a 'specific'
+          section would not be processed.
+
+        * templates/ghs.mpd:
+
+          Fixed the dependency and pch_postrule sections.
+
 Wed Jun 29 06:55:10 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * README:
